add empty copyright field as requested by IEEE

--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -9,10 +9,12 @@
 
 %====================================================================
 
+\IEEEoverridecommandlockouts
+%An empty line for Copyright notice
+\IEEEpubid{\makebox[\columnwidth]{} \hspace{\columnsep}\makebox[\columnwidth]{ }}
 
 \begin{document}
 \title{A first look at browser-based cryptojacking}
-
 
 \author{
 
@@ -25,7 +27,7 @@
 %\input{sections/authors}
 
 \maketitle
-
+\IEEEpubidadjcol
 %====================================================================
 
 \input{sections/abstract}
